--- a/modulo1/html-sistema-loja/template-loja/ctrl-estoque.html
+++ b/modulo1/html-sistema-loja/template-loja/ctrl-estoque.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <p>Nome da lojinha</p>
+        <p>Varejão</p>
     </header>
     
     <nav>
@@ -22,6 +22,7 @@
 
     <table>
         <tr>
+            <th>Nome</th>
             <th>Foto</th>
             <th>Descrição</th>
             <th>Preço (R$)</th>
@@ -29,34 +30,45 @@
         </tr>
 
         <tr>
-            <td><img src="./conjuntoFit.png" alt="Conjunto bore e saia"/></td>
+            <td>Conjunto Fit</td>
+            <td><img src="./img/conjuntoFit.png" alt="Conjunto bore e saia"/></td>
             <td> Conjunto Bore + saia </td>
             <td> R$52,00 </td>
             <td> 30 </td>
         </tr>
 
         <tr>
-            <td><img src="" alt=""/></td>
-            <td> * </td>
-            <td> * </td>
-            <td> * </td>
+            <td>Conjunto Social</td>
+            <td><img src="./img/conjuntoSocial.jpeg" alt="Conjunto Social Feminino"/></td>
+            <td> Cor Azul muito confortável </td>
+            <td> R$89,90 </td>
+            <td> 20 </td>
         </tr>
 
         <tr>
-            <td><img src="" alt=""/></td>
-            <td> * </td>
-            <td> * </td>
-            <td> * </td>
+            <td>Conjunto infantil</td>
+            <td><img src="./img/conjuntoInfantil.jpeg" alt="Conjunto Infantil"/></td>
+            <td> Conjunto Mini blusa e saia deans </td>
+            <td> R$45,90 </td>
+            <td> 50 </td>
         </tr>
 
         <tr>
-            <td><img src="" alt=""/></td>
-            <td> * </td>
-            <td> * </td>
-            <td> * </td>
+            <td>Conjunto Camisa e Calça deans</td>
+            <td><img src="./img/camisetaShort.jpeg" alt="Camiseta e Short deans"/></td>
+            <td> Camiseta algodão e calça Deans </td>
+            <td> R$75,40 </td>
+            <td> 30 </td>
         </tr>
         
         <!-- Crie mais uma linha desta tabela abaixo \/ -->
+         <tr>
+            <td>Tamanco salto alto</td>
+            <td><img src="./img/tamancoElegante.jpeg" alt="Calçado Feminino"></td>
+            <td> Tamanco super confortável </td>
+            <td> R$93,90 </td>
+            <td> 15 </td>
+         </tr>
 
     </table>
 
